--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,168 +1,168 @@
-.page {
-  --gray-rgb: 0, 0, 0;
-  --gray-alpha-200: rgba(var(--gray-rgb), 0.08);
-  --gray-alpha-100: rgba(var(--gray-rgb), 0.05);
-
-  --button-primary-hover: #383838;
-  --button-secondary-hover: #f2f2f2;
-
-  display: grid;
-  grid-template-rows: 20px 1fr 20px;
-  align-items: center;
-  justify-items: center;
-  min-height: 100svh;
-  padding: 80px;
-  gap: 64px;
-  font-family: var(--font-geist-sans);
+.hero {
+    position: relative; 
+    padding: 115px 0 34px; 
+    color: white; 
+    margin-bottom: 120px; 
+    z-index: 20; 
+}
+.hero .content {
+    margin: 0 32px; 
 }
 
-@media (prefers-color-scheme: dark) {
-  .page {
-    --gray-rgb: 255, 255, 255;
-    --gray-alpha-200: rgba(var(--gray-rgb), 0.145);
-    --gray-alpha-100: rgba(var(--gray-rgb), 0.06);
-
-    --button-primary-hover: #ccc;
-    --button-secondary-hover: #1a1a1a;
-  }
-}
-
-.main {
-  display: flex;
-  flex-direction: column;
-  gap: 32px;
-  grid-row-start: 2;
-}
-
-.main ol {
-  font-family: var(--font-geist-mono);
-  padding-left: 0;
-  margin: 0;
-  font-size: 14px;
-  line-height: 24px;
-  letter-spacing: -0.01em;
-  list-style-position: inside;
-}
-
-.main li:not(:last-of-type) {
-  margin-bottom: 8px;
-}
-
-.main code {
-  font-family: inherit;
-  background: var(--gray-alpha-100);
-  padding: 2px 4px;
-  border-radius: 4px;
-  font-weight: 600;
-}
-
-.ctas {
-  display: flex;
-  gap: 16px;
-}
-
-.ctas a {
-  appearance: none;
-  border-radius: 128px;
-  height: 48px;
-  padding: 0 20px;
-  border: none;
-  border: 1px solid transparent;
-  transition:
-    background 0.2s,
-    color 0.2s,
-    border-color 0.2s;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 16px;
-  line-height: 20px;
-  font-weight: 500;
-}
-
-a.primary {
-  background: var(--foreground);
-  color: var(--background);
-  gap: 8px;
-}
-
-a.secondary {
-  border-color: var(--gray-alpha-200);
-  min-width: 180px;
-}
-
-.footer {
-  grid-row-start: 3;
-  display: flex;
-  gap: 24px;
-}
-
-.footer a {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-}
-
-.footer img {
-  flex-shrink: 0;
-}
-
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-  a.primary:hover {
-    background: var(--button-primary-hover);
-    border-color: transparent;
-  }
-
-  a.secondary:hover {
-    background: var(--button-secondary-hover);
-    border-color: transparent;
-  }
-
-  .footer a:hover {
-    text-decoration: underline;
-    text-underline-offset: 4px;
-  }
-}
-
-@media (max-width: 600px) {
-  .page {
-    padding: 32px;
-    padding-bottom: 80px;
-  }
-
-  .main {
-    align-items: center;
-  }
-
-  .main ol {
+.hero .content h1 {
+    font-size: 40px; 
+    line-height: 1; 
+    letter-spacing: -1.79px; 
     text-align: center;
-  }
-
-  .ctas {
-    flex-direction: column;
-  }
-
-  .ctas a {
-    font-size: 14px;
-    height: 40px;
-    padding: 0 16px;
-  }
-
-  a.secondary {
-    min-width: auto;
-  }
-
-  .footer {
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-  }
 }
 
-@media (prefers-color-scheme: dark) {
-  .logo {
-    filter: invert();
-  }
+.hero .circles {
+    visibility: hidden;
+    pointer-events: none;
+    position: absolute; 
+}
+
+.hero .arrow {
+    transform: translatex(-280px)
+}
+
+.hero .text {
+    text-align: center;
+    margin-top: 24px; 
+    position: relative; 
+}
+
+.hero .orange-line {
+    position: absolute; 
+    top: 0; 
+    right: 0; 
+}
+
+.hero .text p {
+    margin-bottom: 34px; 
+    font-size: 15px; 
+    line-height: 1.67; 
+}
+
+.hero picture {
+    z-index: -4; 
+    position: absolute; 
+    inset: 0 0 0 0; 
+}
+
+.how-to-use {
+    margin: 0 32px 120px; 
+}
+
+.how-to-use .flex {
+    display: flex; 
+    flex-direction: column;
+    gap: 48px; 
+    position: relative; 
+}
+.reasons {
+    display: flex; 
+    flex-direction: column;
+    gap: 120px; 
+    margin-bottom: 120px; 
+}
+
+@media screen and (min-width: 768px) {
+    .hero {
+        margin-bottom: 122px; 
+    }
+    .hero .content {
+        margin: 0 97px; 
+    }
+    .hero .content {
+        margin-bottom: 40px; 
+    }
+    .hero .content h1 {
+        font-size: 56px; 
+    }
+    .hero .arrow {
+        transform: translatex(-140px); 
+    }
+    .hero .img-container {
+        display: flex; 
+        justify-content: space-between;
+        align-items: end;
+    }
+    .hero .circles {
+        position: relative; 
+        visibility: visible;
+        pointer-events: all;
+        z-index: 10; 
+        transform: translateX(31px)
+    }
+    .how-to-use {
+        margin: 0 97px 145px; 
+    }
+    .how-to-use .line {
+        position: absolute; 
+        height: 150%; 
+        bottom: 0; 
+        left: 48px; 
+        transform: translatex(-50%);
+        width: 20px; 
+        background-color: #E5ECF4;
+    }
+    .reasons {
+        margin-bottom: 104px; 
+    }
+}
+
+@media screen and (min-width: 1110px) {
+    .hero {
+        display: grid; 
+        grid-template-columns: 1fr 500px 40px 570px 1fr;
+        margin-bottom: 160px; 
+        padding: 153px 0; 
+    }
+    .hero .content {
+        grid-column: 2/3;
+        margin: 0; 
+    }
+    .hero .content h1 {
+        max-width: 500px; 
+        text-align: start;
+    }
+    .hero .text {
+        text-align: justify;
+        max-width: 405px; 
+        margin-left: auto; 
+    }
+    .hero .orange-line {
+        width: 200%; 
+        height: 15px; 
+        background-color: #fcb72b;
+        top: 25px; 
+        transform: translateX(-452px);
+    }
+    .hero .img-container {
+        grid-column: 4/6;
+    }
+    .hero .arrow {
+        transform: translatex(0);
+    }
+    .how-to-use {
+        max-width: 1110px; 
+        margin: 0 auto 200px; 
+    }
+    .how-to-use .flex {
+        flex-direction: row;
+        gap: 30px; 
+    }
+    .how-to-use .line {
+        width: 300%; 
+        height: 20px; 
+        right: 0; 
+        top: 48px; 
+        transform: translateY(-50%); 
+        left: unset; 
+    }
+    .reasons {
+        gap: 160px; 
+        margin-bottom: 200px; 
+    }
 }
