Minor changes to class names

--- a/app/locations/page.module.css
+++ b/app/locations/page.module.css
@@ -132,7 +132,7 @@
         letter-spacing: -2.14px;
         max-width: 457px; 
     }
-    .city {
+    .city-name {
         font-size: 13px; 
         line-height: 2.15; 
         letter-spacing: -0.58px;
